feat: Implement AuthService for user authentication and validator management
- Added AuthService class to handle authentication against a PostgreSQL database.
- Implemented methods for user login, registration, and loading active validators.
- Introduced network settings loading from the database.
- Updated ConfigLoader to utilize AuthService for loading validators and network settings.
- Removed legacy file-based configuration loading methods for validators and network settings.
- Enhanced security by ensuring passwords are hashed before storage and transmission.